# Smartfarm

./: .gitignore  Anchor.toml  Cargo.toml  docker-compose.yml  fix-idl.js  package-lock.json  pitch.html  project.txt  Оптимизация проекта смарт-контрактов и AI..docx
.github/workflows/: oracle-cron.yml
.my-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
.my-ledger/rocksdb.failed/: IDENTITY  LOG  MANIFEST-000005
.my-ledger2/: faucet-keypair.json  genesis.tar.bz2.failed
.my-ledger2/rocksdb.failed/: IDENTITY  LOG  MANIFEST-000005
.test-ledger2/: faucet-keypair.json  genesis.tar.bz2.failed
.test-ledger2/rocksdb.failed/: IDENTITY  LOG  MANIFEST-000005
agent/: .env.example  Dockerfile  dstack.yaml  ecosystem.config.cjs  fix-idl2.js  fix.mjs  package-lock.json  package.json  setup-env.ts  test-agro.mjs  tsconfig.json
agent/src/: bot.ts  buy-policy.ts  character.json  check-program.ts  export-key.ts  index.ts  init-pool.ts  memoryManager.ts  setup-pool.ts  teeAttestation.ts
app/: .firebaserc  firebase.json  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
automation/: README.md
automation/gelato/: gelato-config.json  gelato-emulator.ts  package-lock.json  package.json  schema.json  web3-function.ts  web3Function.ts
deployment/: Dockerfile.tee  deploy-phala-testnet.sh  docker-compose-dstack.yml  phala-config.yaml
programs/smartfarmer/: Cargo.toml
programs/smartfarmer/src/: errors.rs  lib.rs  state.rs
test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
(+29 files in other folders)
